add link to homepage

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <!-- 
                     links to tutorial assignments
                 -->
+                <a href="../CS 130/tutorials/tutorial01/index.html">tutorial 1</a>
             </section>
             <section id="homework">
                 <h2>homework</h2>
