--- a/index.html
+++ b/index.html
@@ -3,30 +3,37 @@
     <head>
         <title>cs-130 homepage</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            <h1>cs-130 homepage</h1>
+            <h1>CS-130 HOMEPAGE<span><img id="icon" src="../CS 130/homepage_images/computer icon.png" alt="a computer"></span></h1>
+            <h3>Seeger Gray</h3>
         </header>
         <main>
             <section id="tutorials">
-                <h2>tutorials</h2>
-                <!-- 
-                    links to tutorial assignments
-                -->
-                <a href="../CS 130/tutorials/tutorial01/index.html">tutorial 1</a>
+                <h2>TUTORIALS<span><img id="icon" src="../CS 130/homepage_images/book icon.png" alt="an open book">
+                </span></h2>
+                <ul>
+                    <li><a href="../CS 130/tutorials/tutorial01/index.html">Tutorial 1</a></li>
+                </ul>
             </section>
             <section id="homework">
-                <h2>homework</h2>
-                <!-- 
-                    links to homework assignments
-                -->
+                <h2>HOMEWORK<span><img id="icon" src="../CS 130/homepage_images/paper icon.png" alt="a sheet of paper">
+                </span></h2>
             </section>
             <section id="inspiration">
-                <h2>design inspiration</h2>
-                <!--
-                    links to 5-10 websites with good design
-                -->
+                <h2>DESIGN INSPIRATION<span><img id="icon" src="../CS 130/homepage_images/pen icon.png" alt="a pencil">
+                </span></h2>
+                <ul>
+                    <li><a href="https://www.npr.org">NPR</a></li>
+                    <li><a href="https://www.nytimes.com">The New York Times</a></li>
+                    <li><a href="https://www.adobe.com/">Adobe</a></li>
+                    <li><a href="https://www.duolingo.com/">Duolingo</a></li>
+                    <li><a href="https://www.quizlet.com">Quizlet</a></li>
+                </ul>
             </section>
         </main>
     </body>
