link tutorial 4 to homepage

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 </span></h2>
                 <ul>
                     <li><a href="../CS 130/tutorials/tutorial01/index.html">Tutorial 1</a></li>
+                    <li><a href="../CS 130/tutorials/tutorial04/index.html">Tutorial 4</a></li>
                 </ul>
             </section>
             <section id="homework">
