--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <section id="homework">
                 <h2>HOMEWORK<span><img id="icon" src="../CS-130/homepage_images/paper icon.png" alt="a sheet of paper">
                 </span></h2>
+                <ul>
+                    <li><a href="../CS-130/hw/hw02/index.html">Homework 2</a></li>
+                </ul>
             </section>
             <section id="inspiration">
                 <h2>DESIGN INSPIRATION<span><img id="icon" src="../CS-130/homepage_images/pen icon.png" alt="a pencil">
