--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <ul>
                     <li><a href="../CS-130/tutorials/tutorial01/index.html">Tutorial 1</a></li>
                     <li><a href="../CS-130/tutorials/tutorial04/index.html">Tutorial 4</a></li>
+                    <li><a href="../CS-130/tutorials/tutorial05/01-font-switcher/index.html">Tutorial 5 (font switcher)</a></li>
+                    <li><a href="../CS-130/tutorials/tutorial05/02-theme-switcher/index.html">Tutorial 5 (theme switcher)</a></li>
                 </ul>
             </section>
             <section id="homework">
