--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 </span></h2>
                 <ul>
                     <li><a href="../CS-130/hw/hw02/index.html">Homework 2</a></li>
+                    <li><a href="../CS-130/hw/hw03/index.html">Homework 3</a></li>
                 </ul>
             </section>
             <section id="inspiration">
