--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <ul>
                     <li><a href="../CS-130/hw/hw02/index.html">Homework 2</a></li>
                     <li><a href="../CS-130/hw/hw03/index.html">Homework 3</a></li>
+                    <li><a href="../CS-130/hw/hw04/index.html">Homework 4</a></li>
                 </ul>
             </section>
             <section id="inspiration">
