--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
     </head>
     <body>
         <header>
-            <h1>CS-130 HOMEPAGE<span><img id="icon" src="../CS-130/homepage_images/computer icon.png" alt="a computer"></span></h1>
+            <h1>CS-130 HOMEPAGE<span><img id="icon" src="/homepage_images/computer icon.png" alt="a computer"></span></h1>
             <h3>Seeger Gray</h3>
         </header>
         <main>
             <section id="tutorials">
-                <h2>TUTORIALS<span><img id="icon" src="../CS-130/homepage_images/book icon.png" alt="an open book">
+                <h2>TUTORIALS<span><img id="icon" src="/homepage_images/book icon.png" alt="an open book">
                 </span></h2>
                 <ul>
-                    <li><a href="../CS-130/tutorials/tutorial01/index.html">Tutorial 1</a></li>
-                    <li><a href="../CS-130/tutorials/tutorial04/index.html">Tutorial 4</a></li>
-                    <li><a href="../CS-130/tutorials/tutorial05/01-font-switcher/index.html">Tutorial 5 (font switcher)</a></li>
-                    <li><a href="../CS-130/tutorials/tutorial05/02-theme-switcher/index.html">Tutorial 5 (theme switcher)</a></li>
-                    <li><a href="../CS-130/tutorials/tutorial06/index.html">Tutorial 6</a></li>
+                    <li><a href="/tutorials/tutorial01/index.html">Tutorial 1</a></li>
+                    <li><a href="/tutorials/tutorial04/index.html">Tutorial 4</a></li>
+                    <li><a href="/tutorials/tutorial05/01-font-switcher/index.html">Tutorial 5 (font switcher)</a></li>
+                    <li><a href="/tutorials/tutorial05/02-theme-switcher/index.html">Tutorial 5 (theme switcher)</a></li>
+                    <li><a href="/tutorials/tutorial06/index.html">Tutorial 6</a></li>
                 </ul>
             </section>
             <section id="homework">
-                <h2>HOMEWORK<span><img id="icon" src="../CS-130/homepage_images/paper icon.png" alt="a sheet of paper">
+                <h2>HOMEWORK<span><img id="icon" src="/homepage_images/paper icon.png" alt="a sheet of paper">
                 </span></h2>
                 <ul>
-                    <li><a href="../CS-130/hw/hw02/index.html">Homework 2</a></li>
-                    <li><a href="../CS-130/hw/hw03/index.html">Homework 3</a></li>
-                    <li><a href="../CS-130/hw/hw04/index.html">Homework 4</a></li>
+                    <li><a href="/hw/hw02/index.html">Homework 2</a></li>
+                    <li><a href="/hw/hw03/index.html">Homework 3</a></li>
+                    <li><a href="/hw/hw04/your_task/index.html">Homework 4</a></li>
                 </ul>
             </section>
             <section id="inspiration">
-                <h2>DESIGN INSPIRATION<span><img id="icon" src="../CS-130/homepage_images/pen icon.png" alt="a pencil">
+                <h2>DESIGN INSPIRATION<span><img id="icon" src="/homepage_images/pen icon.png" alt="a pencil">
                 </span></h2>
                 <ul>
                     <li><a href="https://www.npr.org">NPR</a></li>
