final project deliverable 2

--- a/final project/pages/dance.html
+++ b/final project/pages/dance.html
@@ -3,10 +3,10 @@
     <head>
         <title>Dance Photography by Seeger Gray</title>
         <link rel="stylesheet" href="../style.css">
-        <link rel="stylesheet" href="dance.css">
+        <link rel="stylesheet" href="subpages.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">        <!-- JS if applicable, maybe to expand photo view -->
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -15,23 +15,23 @@
             <h2><a href="sports.html">SPORTS</a></h2>
             <h2><a href="dance.html">DANCE</a></h2>
             <h2><a href="theater.html">THEATER</a></h2>
-            <h2><a href="contact.html">CONTACT</a></h2>
         </header>
+        <section class="genre">DANCE</section>
         <main class="main-detail">
-            <!-- card template 
-            
-                <section class="img_horizontal">
-                    <img class="horizontal" alt="SET ALT TEXT" src="../images/dance/dance-#">
-                </section>
-            
-                <section class="img_vertical">
-                    <img class="vertical" alt="SET ALT TEXT" src="../images/dance/dance-#">
-                </section>
-
-            -->
-            <section class="img_horizontal">
-                <img class="horizontal" alt="test image" src="../images/test.jpg">
-            </section>
+            <div class="h-column">
+                <img class="horizontal" alt="a group of dancers on stage" src="../images/dance/dance-horizontal1.jpg">
+                <img class="horizontal" alt="a group of drummers in red lighting" src="../images/dance/dance-horizontal2.jpg">
+                <img class="horizontal" alt="a dancer on stage" src="../images/dance/dance-horizontal3.jpg">
+            </div>
+            <div class="v-column">
+                <img class="vertical" alt="a dancer on stage" src="../images/dance/dance-vertical1.jpg">
+                <img class="vertical" alt="a dimly lit dancer sits on the floor" src="../images/dance/dance-vertical2.jpg">
+            </div>
+            <div class="h-column">
+                <img class="horizontal" alt="a dancer jumps" src="../images/dance/dance-horizontal4.jpg">
+                <img class="horizontal" alt="a group of dancers on stage" src="../images/dance/dance-horizontal5.jpg">
+                <img class="horizontal" alt="a performer drums on a garbage bin" src="../images/dance/dance-horizontal6.jpg">
+            </div>
         </main>
     </body>
 </html>
