--- a/final project/pages/sports.html
+++ b/final project/pages/sports.html
@@ -3,7 +3,7 @@
     <head>
         <title>Sports Photography by Seeger Gray</title>
         <link rel="stylesheet" href="../style.css">
-        <link rel="stylesheet" href="sports.css">
+        <link rel="stylesheet" href="subpages.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
@@ -15,23 +15,23 @@
             <h2><a href="sports.html">SPORTS</a></h2>
             <h2><a href="dance.html">DANCE</a></h2>
             <h2><a href="theater.html">THEATER</a></h2>
-            <h2><a href="contact.html">CONTACT</a></h2>
         </header>
+        <section class="genre">SPORTS</section>
         <main class="main-detail">
-            <!-- card template 
-            
-                <section class="img_horizontal">
-                    <img class="horizontal" alt="SET ALT TEXT" src="../images/sports/sports-#"
-                </section>
-            
-                <section class="img_vertical">
-                    <img class="vertical" alt="SET ALT TEXT" src="../images/theater/sports-#"
-                </section>
-
-            -->
-            <section class="img_horizontal">
-                <img class="horizontal" alt="test image" src="../images/test.jpg">
-            </section>
+            <div class="h-column">
+                <img class="horizontal" alt="a basketball player jumps towards a hoop" src="../images/sports/sports-horizontal1.jpg">
+                <img class="horizontal" alt="a soccer player protects the ball from the other team" src="../images/sports/sports-horizontal2.jpg">
+                <img class="horizontal" alt="a softball player swings the bat at the ball" src="../images/sports/sports-horizontal3.jpg">
+            </div>
+            <div class="v-column">
+                <img class="vertical" alt="a basketball player jumps and throws the ball towards the hoop" src="../images/sports/sports-vertical1.jpg">
+                <img class="vertical" alt="a basketball player holds up the ball" src="../images/sports/sports-vertical2.jpg">
+            </div>
+            <div class="h-column">
+                <img class="horizontal" alt="a wrestler grabs another from behind on the floor" src="../images/sports/sports-horizontal4.jpg">
+                <img class="horizontal" alt="two fencers jump at each other" src="../images/sports/sports-horizontal5.jpg">
+                <img class="horizontal" alt="a basketball player passes the ball" src="../images/sports/sports-horizontal6.jpg">
+            </div>
         </main>
     </body>
 </html>
