--- a/final project/pages/theater.html
+++ b/final project/pages/theater.html
@@ -3,7 +3,7 @@
     <head>
         <title>Theater Photography by Seeger Gray</title>
         <link rel="stylesheet" href="../style.css">
-        <link rel="stylesheet" href="theater.css">
+        <link rel="stylesheet" href="subpages.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
@@ -15,44 +15,23 @@
             <h2><a href="sports.html">SPORTS</a></h2>
             <h2><a href="dance.html">DANCE</a></h2>
             <h2><a href="theater.html">THEATER</a></h2>
-            <h2><a href="contact.html">CONTACT</a></h2>
         </header>
+        <section class="genre">THEATER</section>
         <main class="main-detail">
-            <!-- card template 
-            
-                <section class="img_horizontal">
-                    <img class="horizontal" alt="SET ALT TEXT" src="../images/theater/theater-#"
-                </section>
-            
-                <section class="img_vertical">
-                    <img class="vertical" alt="SET ALT TEXT" src="../images/theater/theater-#"
-                </section>
-
-            -->
-            <section id="h1" class="image">   
-                <img class="horizontal" alt="test image" src="../images/test.jpg">
-            </section>
-            <section id="v1" class="image">
-                <img class="vertical" alt="test image" src="../images/test-vert.jpg">
-            </section>   
-            <section id="h2" class="image">   
-                <img class="horizontal" alt="test image" src="../images/test.jpg">
-            </section>
-            <section id="h3" class="image">   
-                <img class="horizontal" alt="test image" src="../images/test.jpg">
-            </section> 
-            <section id="v2" class="image">
-                <img class="vertical" alt="test image" src="../images/test-vert.jpg">
-            </section>   
-            <section id="h4" class="image">   
-                <img class="horizontal" alt="test image" src="../images/test.jpg">
-            </section>  
-            <section id="h5" class="image">   
-                <img class="horizontal" alt="test image" src="../images/test.jpg">
-            </section>  
-            <section id="h6" class="image">   
-                <img class="horizontal" alt="test image" src="../images/test.jpg">
-            </section> 
+            <div class="h-column">
+                <img class="horizontal" alt="a group of performers in a play" src="../images/theater/theater-horizontal1.jpg">
+                <img class="horizontal" alt="three performers in a play" src="../images/theater/theater-horizontal2.jpg">
+                <img class="horizontal" alt="a group of performers in a play looking up" src="../images/theater/theater-horizontal3.jpg">
+            </div>
+            <div class="v-column">
+                <img class="vertical" alt="a performer looking up in red and blue lights" src="../images/theater/theater-vertical1.jpg">
+                <img class="vertical" alt="a performer with their hand on another's shoulder" src="../images/theater/theater-vertical2.jpg">
+            </div>
+            <div class="h-column">
+                <img class="horizontal" alt="a group of performers in a play" src="../images/theater/theater-horizontal4.jpg">
+                <img class="horizontal" alt="two performers in a play hug" src="../images/theater/theater-horizontal5.jpg">
+                <img class="horizontal" alt="a performer lit from behind" src="../images/theater/theater-horizontal6.jpg">
+            </div>
         </main>
     </body>
 </html>
