--- a/final project/index.html
+++ b/final project/index.html
@@ -15,13 +15,10 @@
             <h2><a href="pages/sports.html">SPORTS</a></h2>
             <h2><a href="pages/dance.html">DANCE</a></h2>
             <h2><a href="pages/theater.html">THEATER</a></h2>
-            <h2><a href="pages/contact.html">CONTACT</a></h2>
         </header>
         <div id="main-content">
             <aside>
-            <!-- on the side, shouldn't scroll -->
-            <!-- profile pic -->
-            <img id="headshot" src="images/test.jpg">
+            <img id="headshot" src="images/headshot.jpg">
             <div id="bio">
                 <h1>SEEGER GRAY</h1>
                 <p>
@@ -34,32 +31,30 @@
             <p>Email: <a href="mailto:szgray@icloud.com">szgray@icloud.com</a></p>
             <p>Instagram: <a href="https://www.instagram.com/photosbyseeger/" target="_blank" rel="noreferrer noopener">@photosbyseeger</a></p>
             <p>Twitter: <a href="https://twitter.com/seegergray" target="_blank" rel="noreferrer noopener">@seegergray</a></p>
-                <!-- need to add insta and twitter icons to replace text -->
             </div>
         </aside>
         <main class="main-home">
-            <!-- best pics from each section, click on one to go to the section -->
             <a href="pages/portraits.html">
                 <button class="card">
-                    <img class="genre-preview" alt="test image" src="images/test.jpg">
+                    <img class="genre-preview" alt="a close up portrait" src="images/portraits/portraits-horizontal6.jpg">
                     PORTRAITS
                 </button>
             </a>
             <a href="pages/sports.html">
                 <button class="card">
-                    <img class="genre-preview" alt="test image" src="images/test.jpg">
+                    <img class="genre-preview" alt="a basketball player jumps towards the hoop" src="images/sports/sports-horizontal1.jpg">
                     SPORTS
                 </button>
             </a>
             <a href="pages/dance.html">
                 <button class="card">
-                    <img class="genre-preview" alt="test image" src="images/test.jpg">
+                    <img class="genre-preview" alt="a group of dancers on stage" src="images/dance/dance-horizontal1.jpg">
                     DANCE
                 </button>
             </a>
             <a href="pages/theater.html">
                 <button class="card">
-                    <img class="genre-preview" alt="test image" src="images/test.jpg">
+                    <img class="genre-preview" alt="a group of performers in a play" src="images/theater/theater-horizontal1.jpg">
                     THEATER
                 </button>
             </a>
