--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li><a href="../CS-130/hw/hw02/index.html">Homework 2</a></li>
                     <li><a href="../CS-130/hw/hw03/index.html">Homework 3</a></li>
                     <li><a href="../CS-130/hw/hw04/your_task/index.html">Homework 4</a></li>
+                    <li><a href="../CS-130/final project/index.html">Final Project (portfolio)</a></li>
                 </ul>
             </section>
             <section id="inspiration">
