image click effect

--- a/final project/pages/portraits.html
+++ b/final project/pages/portraits.html
@@ -19,19 +19,42 @@
         <section class="genre">PORTRAITS</section>
         <main class="main-detail">
             <div class="h-column">
-                <img class="horizontal" alt="a close up portrait" src="../images/portraits/portraits-horizontal1.jpg">
-                <img class="horizontal" alt="a close up portrait" src="../images/portraits/portraits-horizontal2.jpg">
-                <img class="horizontal" alt="a close up portrait" src="../images/portraits/portraits-horizontal3.jpg">
+                <input type="checkbox" class="h" id="h1">
+                <label class="btn" for="h1">
+                    <img class="horizontal" alt="a close up portrait" src="../images/portraits/portraits-horizontal1.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h2">
+                <label class="btn" for="h2">
+                    <img class="horizontal" alt="a close up portrait" src="../images/portraits/portraits-horizontal2.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h3">
+                <label class="btn" for="h3">
+                    <img class="horizontal" alt="a close up portrait" src="../images/portraits/portraits-horizontal3.jpg">
+                </label>
             </div>
             <div class="v-column">
-                <img class="vertical" alt="a close up portrait" src="../images/portraits/portraits-vertical1.jpg">
-                <img class="vertical" alt="a close up portrait" src="../images/portraits/portraits-vertical2.jpg">
+                <input type="checkbox" class="v" id="v1">
+                <label class="btn" for="v1">
+                    <img class="vertical" alt="a close up portrait" src="../images/portraits/portraits-vertical1.jpg">
+                </label>
+                <input type="checkbox" class="v" id="v2">
+                <label class="btn" for="v2">
+                    <img class="vertical" alt="a close up portrait" src="../images/portraits/portraits-vertical2.jpg">
+                </label>
             </div>
             <div class="h-column">
-                <img class="horizontal" alt="a close up portrait" src="../images/portraits/portraits-horizontal4.jpg">
-                <img class="horizontal" alt="a close up portrait" src="../images/portraits/portraits-horizontal5.jpg">
-                <img class="horizontal" alt="a close up portrait" src="../images/portraits/portraits-horizontal6.jpg">
-            </div>
+                <input type="checkbox" class="h" id="h4">
+                <label class="btn" for="h4">
+                    <img class="horizontal" alt="a close up portrait" src="../images/portraits/portraits-horizontal4.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h5">
+                <label class="btn" for="h5">    
+                    <img class="horizontal" alt="a close up portrait" src="../images/portraits/portraits-horizontal5.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h6">
+                <label class="btn" for="h6">    
+                    <img class="horizontal" alt="a close up portrait" src="../images/portraits/portraits-horizontal6.jpg">
+                </label>
         </main>
     </body>
 </html>
