--- a/final project/pages/sports.html
+++ b/final project/pages/sports.html
@@ -19,18 +19,42 @@
         <section class="genre">SPORTS</section>
         <main class="main-detail">
             <div class="h-column">
-                <img class="horizontal" alt="a basketball player jumps towards a hoop" src="../images/sports/sports-horizontal1.jpg">
-                <img class="horizontal" alt="a soccer player protects the ball from the other team" src="../images/sports/sports-horizontal2.jpg">
-                <img class="horizontal" alt="a softball player swings the bat at the ball" src="../images/sports/sports-horizontal3.jpg">
+                <input type="checkbox" class="h" id="h1">
+                <label class="btn" for="h1">
+                    <img class="horizontal" alt="a basketball player jumps towards a hoop" src="../images/sports/sports-horizontal1.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h2">
+                <label class="btn" for="h2">
+                    <img class="horizontal" alt="a soccer player protects the ball from the other team" src="../images/sports/sports-horizontal2.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h3">
+                <label class="btn" for="h3">
+                    <img class="horizontal" alt="a softball player swings the bat at the ball" src="../images/sports/sports-horizontal3.jpg">
+                </label>
             </div>
             <div class="v-column">
-                <img class="vertical" alt="a basketball player jumps and throws the ball towards the hoop" src="../images/sports/sports-vertical1.jpg">
-                <img class="vertical" alt="a basketball player holds up the ball" src="../images/sports/sports-vertical2.jpg">
+                <input type="checkbox" class="v" id="v1">
+                <label class="btn" for="v1">
+                    <img class="vertical" alt="a basketball player jumps and throws the ball towards the hoop" src="../images/sports/sports-vertical1.jpg">
+                </label>
+                <input type="checkbox" class="v" id="v2">
+                <label class="btn" for="v2">
+                    <img class="vertical" alt="a basketball player holds up the ball" src="../images/sports/sports-vertical2.jpg">
+                </label>
             </div>
             <div class="h-column">
-                <img class="horizontal" alt="a wrestler grabs another from behind on the floor" src="../images/sports/sports-horizontal4.jpg">
-                <img class="horizontal" alt="two fencers jump at each other" src="../images/sports/sports-horizontal5.jpg">
-                <img class="horizontal" alt="a basketball player passes the ball" src="../images/sports/sports-horizontal6.jpg">
+                <input type="checkbox" class="h" id="h4">
+                <label class="btn" for="h4">
+                    <img class="horizontal" alt="a wrestler grabs another from behind on the floor" src="../images/sports/sports-horizontal4.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h5">
+                <label class="btn" for="h5">    
+                    <img class="horizontal" alt="two fencers jump at each other" src="../images/sports/sports-horizontal5.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h6">
+                <label class="btn" for="h6">    
+                    <img class="horizontal" alt="a basketball player passes the ball" src="../images/sports/sports-horizontal6.jpg">
+                </label>
             </div>
         </main>
     </body>
