--- a/final project/pages/theater.html
+++ b/final project/pages/theater.html
@@ -19,19 +19,42 @@
         <section class="genre">THEATER</section>
         <main class="main-detail">
             <div class="h-column">
-                <img class="horizontal" alt="a group of performers in a play" src="../images/theater/theater-horizontal1.jpg">
-                <img class="horizontal" alt="three performers in a play" src="../images/theater/theater-horizontal2.jpg">
-                <img class="horizontal" alt="a group of performers in a play looking up" src="../images/theater/theater-horizontal3.jpg">
+                <input type="checkbox" class="h" id="h1">
+                <label class="btn" for="h1">
+                    <img class="horizontal" alt="a group of performers in a play" src="../images/theater/theater-horizontal1.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h2">
+                <label class="btn" for="h2">
+                    <img class="horizontal" alt="three performers in a play" src="../images/theater/theater-horizontal2.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h3">
+                <label class="btn" for="h3">
+                    <img class="horizontal" alt="a group of performers in a play looking up" src="../images/theater/theater-horizontal3.jpg">
+                </label>
             </div>
             <div class="v-column">
-                <img class="vertical" alt="a performer looking up in red and blue lights" src="../images/theater/theater-vertical1.jpg">
-                <img class="vertical" alt="a performer with their hand on another's shoulder" src="../images/theater/theater-vertical2.jpg">
+                <input type="checkbox" class="v" id="v1">
+                <label class="btn" for="v1">
+                    <img class="vertical" alt="a performer looking up in red and blue lights" src="../images/theater/theater-vertical1.jpg">
+                </label>
+                <input type="checkbox" class="v" id="v2">
+                <label class="btn" for="v2">
+                    <img class="vertical" alt="a performer with their hand on another's shoulder" src="../images/theater/theater-vertical2.jpg">
+                </label>
             </div>
             <div class="h-column">
-                <img class="horizontal" alt="a group of performers in a play" src="../images/theater/theater-horizontal4.jpg">
-                <img class="horizontal" alt="two performers in a play hug" src="../images/theater/theater-horizontal5.jpg">
-                <img class="horizontal" alt="a performer lit from behind" src="../images/theater/theater-horizontal6.jpg">
-            </div>
+                <input type="checkbox" class="h" id="h4">
+                <label class="btn" for="h4">
+                    <img class="horizontal" alt="a group of performers in a play" src="../images/theater/theater-horizontal4.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h5">
+                <label class="btn" for="h5">    
+                    <img class="horizontal" alt="two performers in a play hug" src="../images/theater/theater-horizontal5.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h6">
+                <label class="btn" for="h6">    
+                    <img class="horizontal" alt="a performer lit from behind" src="../images/theater/theater-horizontal6.jpg">
+                </label>
         </main>
     </body>
 </html>
