--- a/final project/pages/dance.html
+++ b/final project/pages/dance.html
@@ -19,18 +19,42 @@
         <section class="genre">DANCE</section>
         <main class="main-detail">
             <div class="h-column">
-                <img class="horizontal" alt="a group of dancers on stage" src="../images/dance/dance-horizontal1.jpg">
-                <img class="horizontal" alt="a group of drummers in red lighting" src="../images/dance/dance-horizontal2.jpg">
-                <img class="horizontal" alt="a dancer on stage" src="../images/dance/dance-horizontal3.jpg">
+                <input type="checkbox" class="h" id="h1">
+                <label class="btn" for="h1">
+                    <img class="horizontal" alt="a group of dancers on stage" src="../images/dance/dance-horizontal1.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h2">
+                <label class="btn" for="h2">
+                    <img class="horizontal" alt="a group of drummers in red lighting" src="../images/dance/dance-horizontal2.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h3">
+                <label class="btn" for="h3">
+                    <img class="horizontal" alt="a dancer on stage" src="../images/dance/dance-horizontal3.jpg">
+                </label>
             </div>
             <div class="v-column">
-                <img class="vertical" alt="a dancer on stage" src="../images/dance/dance-vertical1.jpg">
-                <img class="vertical" alt="a dimly lit dancer sits on the floor" src="../images/dance/dance-vertical2.jpg">
+                <input type="checkbox" class="v" id="v1">
+                <label class="btn" for="v1">
+                    <img class="vertical" alt="a dancer on stage" src="../images/dance/dance-vertical1.jpg">
+                </label>
+                <input type="checkbox" class="v" id="v2">
+                <label class="btn" for="v2">
+                    <img class="vertical" alt="a dimly lit dancer sits on the floor" src="../images/dance/dance-vertical2.jpg">
+                </label>
             </div>
             <div class="h-column">
-                <img class="horizontal" alt="a dancer jumps" src="../images/dance/dance-horizontal4.jpg">
-                <img class="horizontal" alt="a group of dancers on stage" src="../images/dance/dance-horizontal5.jpg">
-                <img class="horizontal" alt="a performer drums on a garbage bin" src="../images/dance/dance-horizontal6.jpg">
+                <input type="checkbox" class="h" id="h4">
+                <label class="btn" for="h4">
+                    <img class="horizontal" alt="a dancer jumps" src="../images/dance/dance-horizontal4.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h5">
+                <label class="btn" for="h5">    
+                    <img class="horizontal" alt="a group of dancers on stage" src="../images/dance/dance-horizontal5.jpg">
+                </label>
+                <input type="checkbox" class="h" id="h6">
+                <label class="btn" for="h6">    
+                    <img class="horizontal" alt="a performer drums on a garbage bin" src="../images/dance/dance-horizontal6.jpg">
+                </label>
             </div>
         </main>
     </body>
